--- a/P_1_W2_Heather_Foster_Regression_Prediction_of_Grocery_Sales.ipynb
+++ b/P_1_W2_Heather_Foster_Regression_Prediction_of_Grocery_Sales.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1dIfbTsFj43HoENyJKIjAuyd1OFMDQmtG",
-      "authorship_tag": "ABX9TyOcEnYaSRbgdrf5PqxqXA3y",
+      "authorship_tag": "ABX9TyPwalwVCwufJlbSpANCtYf5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "lupIS7oZhkzU"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "T7rwpxLXhwrC"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         },
         "outputId": "f37ed46a-4966-48d8-d0ef-749e2dbf475e"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
         },
         "outputId": "e8efb027-22b4-4a23-a2bd-f0a155f2b3af"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +367,7 @@
         },
         "outputId": "ae225060-3abb-4867-958c-0672a858a194"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -621,7 +621,7 @@
         },
         "outputId": "eb977981-af58-443d-9e83-4fa472aa65aa"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -657,7 +657,7 @@
         },
         "outputId": "de2c4fee-bb7f-4d74-a30e-d1204361b627"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,7 +704,7 @@
         },
         "outputId": "0a89e23d-ad26-4818-ccbb-9ec87e955754"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +731,7 @@
         },
         "outputId": "a8bb1d57-0b68-46ef-f588-ce6254656394"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -780,7 +780,7 @@
         },
         "outputId": "bc3d8cd2-87c7-4819-9b7b-afc97fabbab7"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -815,7 +815,7 @@
         },
         "outputId": "3a0bf8f7-8893-4e5f-af93-c157c83d6693"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -853,7 +853,7 @@
         },
         "outputId": "2fc3f790-c646-460d-9f98-f2b164775546"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +909,7 @@
         },
         "outputId": "5862f55f-52a2-4224-c5e1-503f7f935c31"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +956,7 @@
         },
         "outputId": "8b46a7f0-19d3-4fad-fec5-3c5086f1648f"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -994,7 +994,7 @@
         },
         "outputId": "c1137296-1d00-4705-e742-56ffb58058f2"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
       "metadata": {
         "id": "KEW86oj6K2ts"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1063,7 +1063,7 @@
         },
         "outputId": "35ccf36a-8191-45ba-e848-c01461940158"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1791,7 +1791,7 @@
         },
         "outputId": "40648480-b641-43e7-c93e-16a03e301d60"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1822,7 +1822,7 @@
         },
         "outputId": "0d2b708e-cafe-47e7-bc9e-ad7aba4cbabd"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1868,7 +1868,7 @@
         },
         "outputId": "c1af8a2c-6789-48d2-d5b9-767f98be9e9c"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1905,7 +1905,7 @@
       "metadata": {
         "id": "A0vPuuqyN6h7"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1920,7 +1920,7 @@
         "id": "AqQ-RqBcTEv9",
         "outputId": "6c8551fa-579a-4591-c562-d67ff20591fa"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1964,7 +1964,7 @@
         },
         "outputId": "b3b61148-a770-46c2-e7c8-e235580af7c9"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1988,7 +1988,7 @@
       "metadata": {
         "id": "8rzG_WWVVgOK"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2005,7 +2005,7 @@
         },
         "outputId": "2999d7d0-cd80-4f90-d482-70db25827d3b"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2195,7 +2195,7 @@
         },
         "outputId": "ba8580b0-763a-403b-c4be-572652de2d14"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2221,6 +2221,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "How do the Fat Contents of the items relate to each other?"
+      ],
+      "metadata": {
+        "id": "6Jnbtxs31JOw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df['Item_Fat_Content'].hist()\n",
@@ -2238,7 +2247,7 @@
         "outputId": "b75e60d2-1861-42ff-f56f-9c51f1dfcf0d",
         "id": "4wAOqozOgDkE"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2277,7 +2286,7 @@
         "id": "4887-PdRhzDF",
         "outputId": "be7e0e3d-c7c7-4244-a86e-db9c3b9a16e7"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2308,6 +2317,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "What are the different types of items?"
+      ],
+      "metadata": {
+        "id": "nvo03YSU1UAF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "ax = Item_Type_value_counts.plot(kind = 'barh')\n",
@@ -2323,7 +2341,7 @@
         "id": "JmP_bCvgldTn",
         "outputId": "33b7ba4e-3fde-4b2b-a1c2-de6e7e49094e"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
